# git-branch-status

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: coverage.yml  release.yml  rust-ci.yml
docs/: performance.md
scripts/: bench-vcs-info.sh  bench.sh
src/: branch.rs  branch_status.rs  cli.rs  error.rs  lib.rs  main.rs  mode.rs  repository.rs  repository_ext.rs  status_entry_ext.rs
tests/: cmd.rs
