[package]
name = "git-branch-status"
version = "0.1.1"
authors = ["Akiomi Kamakura <akiomik@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "A command line tool for displaying git branch colored by status"
readme = "README.md"
repository = "https://github.com/akiomik/git-branch-status"
license = "Apache-2.0"
keywords = ["git", "branch", "prompt", "vcs", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "screenshot.png",
]

[dependencies]
ansi_term = "0.12"
clap = "4.6.1"
gix = { version = "=0.85.0", default-features = false, features = ["status", "revision", "max-performance-safe", "sha1"] }
thiserror = "2.0.18"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
debug = true
strip = false

[dev-dependencies]
tempfile = "3"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

multiple_crate_versions = "allow"
unwrap_used = "warn"
panic = "warn"
absolute_paths = "warn"
